tests/compError/wrongReturnType.ucl
// compError
// error: expected type builtin:String, but got type builtin:Number
// tests/compError/wrongReturnType.ucl:6 -> expected type defined here
// tests/compError/wrongReturnType.ucl:7 -> actual type from here

test = fn() -> String {
	1
}